# VSSD-Trait

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: ablation_clip_level.yaml  ablation_concat_fusion.yaml  ablation_mean_pool.yaml  ablation_no_aux_heads.yaml  ablation_no_ccc_loss.yaml  ablation_resnet50.yaml  ablation_v_only.yaml  ablation_va.yaml  ablation_vat_full.yaml  ablation_vit_b16.yaml  ablation_vt.yaml  colab_smoke.yaml  default.yaml
docs/: architecture.md  data.md  experiments.md  results.md
notebooks/: A1_VSSD_A1_baseline_final.ipynb  FIv2_VSSD_extended_experiments_colab.ipynb  FIv2_VSSD_full_end2end_colab.ipynb  FIv2_VSSD_journal_upgrade_localcache.ipynb  mamba.ipynb  mamba_v100A_formatted.ipynb
results/: manifest.json
results/tables/: table_10_seed_reproducibility.csv  table_11_final_comparison.csv  table_1_modality_ablation.csv  table_2_architectural_ablation.csv  table_3_compute_characteristics.csv  table_4_audio_noise.csv  table_5_jpeg_compression.csv  table_6_fps_decimation.csv  table_7_face_occlusion.csv  (+2 more)
scripts/: A1_VSSD_A1_baseline_final.py  _common.py  build_final_table.py  eval_full.py  make_figures.py  precache_features.py  run_all_experiments.sh  run_architectural_ablation.py  run_compute_benchmarks.py  run_fusion_analysis.py  run_modality_ablation.py  run_robustness.py  run_seed_reproducibility.py  run_window_analysis.py  test-torch.py  train_full.py
tests/: conftest.py  test_config.py  test_metrics.py  test_perturbations.py  test_results.py
(+27 files in other folders)
